--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "lowdb": "^3.0.0",
     "nanoid": "^3.1.30"
+  },
+  "scripts": {
+    "dev": "vite"
+  },
+  "devDependencies": {
+    "vite": "^5.0.12"
   }
 }
